<resources>
    <string name="app_name">Ergo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="getting_started">Getting Started</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="your_email">Your email</string>
    <string name="username">Username</string>
    <string name="your_username">Your username</string>
    <string name="password">Password</string>

    <string name="_7dyns23df">#@7dynS23df@</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_text">Log in</string>
    <string name="please_provide_details_for_your_account">Please provide details for your account</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="friends_text">Friends</string>
    <string name="choose_friends">Choose friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="friend_s_username">Friend\'s Username</string>
    <string name="in_0_group_s_with_you">In 0 group(s) with you</string>
    <string name="friend_s_name">Friend\'s Name</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="add_a_new_friend">Add a new friend</string>
    <string name="add_a_new_group">Add a new group</string>
    <string name="new_task">New Task</string>
    <string name="description">Description</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="save_task">Save Task</string>
    <string name="tasks_due_today">Tasks due today</string>
    <string name="add_your_friends">Add Your Friends</string>
    <string name="pick_end_date">Pick end date</string>
    <string name="members">Members</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="title">Title</string>
    <string name="new_group">New Group</string>
    <string name="tasks_not_yet_due">Tasks not yet due</string>
    <string name="uni_mates">Uni mates</string>
    <string name="add_a_new_member">Add a new member</string>
    <string name="add_people_to_this_task">Add people to this task</string>
    <string name="priority">Priority</string>
</resources>