<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="850dp"
    android:background="@color/app_background_col"
    android:backgroundTint="@color/app_background_col">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/include"
            layout="@layout/objects_image"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLay">

        <TextView
            android:id="@+id/GettingStartedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_started"
            android:textColor="@color/darkest_purple_col"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CreateAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textColor="@color/darkest_purple_col"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GettingStartedText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CreateAccountText">

            <TextView
                android:id="@+id/EmailText"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textColor="@color/darkest_purple_col"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/EmailInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_background"
                android:ems="10"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_purple_col"
                android:textColorHint="@color/dark_purple_col"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailText"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/UsernameText"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginTop="60dp"
                android:text="@string/username"
                android:textColor="@color/darkest_purple_col"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/EmailText"
                app:layout_constraintTop_toBottomOf="@+id/EmailText"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/UsernameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_edittext_background"
                android:ems="10"
                android:fallbackLineSpacing="false"
                android:hint="@string/your_username"
                android:inputType="text"
                android:textColor="@color/dark_purple_col"
                android:textColorHint="@color/dark_purple_col"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UsernameText"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/PasswordText"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginTop="60dp"
                android:text="@string/password"
                android:textColor="@color/darkest_purple_col"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/UsernameText"
                app:layout_constraintTop_toBottomOf="@+id/UsernameText"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/PasswordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_edittext_background"
                android:ems="10"
                android:hint="@string/_7dyns23df"
                android:inputType="textPassword"
                android:textColor="@color/dark_purple_col"
                android:textColorHint="@color/dark_purple_col"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PasswordText"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/CreateAccountButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_darkest_purple"
                android:text="@string/create_account"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PasswordInput"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="VisualLintButtonSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:ignore="TouchTargetSizeCheck">

            <TextView
                android:id="@+id/AlreadyHaveAnAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/darkest_purple_col" />

            <TextView
                android:id="@+id/LogInText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:layout_weight="1"
                android:text="@string/log_in_text"
                android:textColor="@color/darkest_purple_col"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>