<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="850dp"
    android:background="@color/app_background_col">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="32dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/NewTaskT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/new_task"
                android:textColor="@color/darkest_purple_col"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TitleT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/TitleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_background"
                android:inputType="text"
                android:textColor="@color/dark_purple_col"
                android:textColorHint="@color/dark_purple_col"/>

            <TextView
                android:id="@+id/PriorityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/priority"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/PrioritySpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/status_and_priority_red"
                android:prompt="@string/spinner_status_prompt" />

            <TextView
                android:id="@+id/StatusT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/status"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/StatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/status_and_priority_green"
                android:prompt="@string/spinner_priority_prompt" />

            <TextView
                android:id="@+id/StartDateT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/start_date"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/StartDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/no_color_button"
                android:padding="10dp"
                android:textColor="@color/dark_purple_col"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/EndDateT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/end_date"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/EndDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/no_color_button"
                android:padding="10dp"
                android:textColor="@color/dark_purple_col"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/MembersText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_people_to_this_task"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/no_color_button" />

<!--            <LinearLayout-->
<!--                android:id="@+id/Friends_to_add_to_task"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="-16dp"-->
<!--                android:orientation="vertical">-->

<!--                <include layout="@layout/choose_friends_list_item" />-->
<!--            </LinearLayout>-->

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/DescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edittext_background"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@color/dark_purple_col"
                android:textColorHighlight="@color/dark_purple_col"/>

            <Button
                android:id="@+id/SaveTaskButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="112dp"
                android:background="@drawable/button_darkest_purple"
                android:text="@string/save_task"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
