<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="850dp"
    android:background="@color/app_background_col"
    android:backgroundTint="@color/app_background_col">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="32dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/NewGroupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/new_group"
                android:textColor="@color/darkest_purple_col"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Other Scrollable Content Below the Title -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/TitleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/uni_mates"
                android:inputType="text"
                android:textColor="@color/dark_purple_col"
                android:textColorHint="@color/lavender_col" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/members"
                android:textColor="@color/darkest_purple_col"
                android:textSize="18sp"
                android:textStyle="bold" />
            <SearchView
                android:id="@+id/userSearchViewGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/no_color_button" />


            <ListView
                android:id="@+id/userListViewGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />



<!--            <Button-->
<!--                android:id="@+id/AddNewMemberButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="112dp"-->
<!--                android:background="@drawable/no_color_button"-->
<!--                android:backgroundTint="@null"-->
<!--                android:text="@string/add_a_new_member"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="20sp"-->
<!--                app:cornerRadius="30dp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/SaveGroupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="112dp"
                android:background="@drawable/no_color_button"
                android:backgroundTint="@null"
                android:text="Save Group"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="30dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
